Yenile düğmesi eklendi.

--- a/app/options.html
+++ b/app/options.html
@@ -1,6 +1,9 @@
 <!doctype html>
-<html>
+<html id="options">
   <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic,600&subset=latin,latin-ext">
+    <link href="https://eksisozluk.com/content/css/ust1584152-1.css" rel="stylesheet">
     <!-- build:css styles/options-vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
