--- a/app/popup.html
+++ b/app/popup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html id="popup">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic,600&subset=latin,latin-ext">
@@ -12,7 +12,11 @@
     <link href="styles/main.css" rel="stylesheet">
     <!-- endbuild -->
   </head>
-  <body id="popup">
+  <body>
+    <div class="edittools">
+      <button type="button" class="refresh">yenile</button>
+      <button type="button" class="options">ayarlar</button>
+    </div>
     <div id="topic">
       <ul id="entry-list"></ul>
     </div>
