Seçenekler kısmı hazırlandı.

--- a/app/options.html
+++ b/app/options.html
@@ -1,28 +1,63 @@
 <!doctype html>
 <html id="options">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic,600&subset=latin,latin-ext">
-    <link href="https://eksisozluk.com/content/css/ust1584152-1.css" rel="stylesheet">
-    <!-- build:css styles/options-vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css styles/main.css -->
-    <link href="styles/main.css" rel="stylesheet">
-    <!-- endbuild -->
-  </head>
-  <body>
-    <h1>'Allo, 'Allo!</h1>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css"
+        href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic,600&subset=latin,latin-ext">
+  <link rel="stylesheet" href="https://eksisozluk.com/content/css/ust1584152-1.css">
+  <!-- build:css styles/options-vendor.css -->
+  <!-- bower:css -->
+  <!-- endbower -->
+  <!-- endbuild -->
+  <!-- build:css styles/main.css -->
+  <link href="styles/main.css" rel="stylesheet">
+  <!-- endbuild -->
+</head>
+<body>
+<div id="content" class="instapaper_body" role="main">
+  <section id="content-body">
+    <h1>ayarlar</h1>
+    <ul id="settings-tabs" class="tabs">
+      <li class="active"><a href>tercihler</a></li>
+    </ul>
+    <form class="vertical">
+      <div class="validation-summary-valid">
+      </div>
+      <fieldset>
+        <legend>tercihler</legend>
+        <div>
+          <label for="UpdateFrequency">güncelleme sıklığı</label>
+          <input id="UpdateFrequency" type="number" min="1">
+        </div>
+      </fieldset>
+      <div class="actions">
+        <button type="submit" class="primary">kaydet</button>
+      </div>
+      <br>
+      <p>
+        <a href="https://www.eksisozluk.com/registration/eula" class="link-special" target="_blank">
+          ekşi sözlük kullanıcı sözleşmesi
+        </a>
+      </p>
+      <br>
+    </form>
+  </section>
+</div>
+<footer id="site-footer">
+  <ul>
+    <li><a href="https://github.com/kemalersin/sukelamatik">github</a></li>
+    <li><a href="https://github.com/kemalersin/sukelamatik">bir kahve ısmarlayın!</a></li>
+  </ul>
+</footer>
 
-    <!-- build:js scripts/options-vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+<!-- build:js scripts/options-vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
 
-    <!-- build:js scripts/options.js -->
-    <script src="scripts/options.js"></script>
-    <!-- endbuild -->
-  </body>
+<!-- build:js scripts/options.js -->
+<script src="scripts/options.js"></script>
+<!-- endbuild -->
+</body>
 </html>
