--- a/app/options.html
+++ b/app/options.html
@@ -26,7 +26,7 @@
       <fieldset>
         <legend>tercihler</legend>
         <div>
-          <label for="UpdateFrequency">güncelleme sıklığı</label>
+          <label for="UpdateFrequency">güncelleme sıklığı (dk)</label>
           <input id="UpdateFrequency" type="number" min="1">
         </div>
       </fieldset>
@@ -46,7 +46,7 @@
 <footer id="site-footer">
   <ul>
     <li><a href="https://github.com/kemalersin/sukelamatik">github</a></li>
-    <li><a href="https://github.com/kemalersin/sukelamatik">bir kahve ısmarlayın!</a></li>
+    <li><a href="https://github.com/kemalersin/sukelamatik">bi' kahve ısmarlayın!</a></li>
   </ul>
 </footer>
 
