Bağış linki eklendi.

--- a/app/options.html
+++ b/app/options.html
@@ -46,7 +46,7 @@
 <footer id="site-footer">
   <ul>
     <li><a href="https://github.com/kemalersin/sukelamatik">github</a></li>
-    <li><a href="https://github.com/kemalersin/sukelamatik">bi' kahve ısmarlayın!</a></li>
+    <li><a href="https://www.generosity.com/fundraising/acik-kaynakli-ucretsiz-yazilim-projelerine-destek/x/8536925">bi' kahve ısmarlayın!</a></li>
   </ul>
 </footer>
 
