--- a/app/popup.html
+++ b/app/popup.html
@@ -23,6 +23,7 @@
 
     <!-- build:js scripts/popup-vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
